lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:48: error: expected class or object definition
def descend(sol:Double) {
^Lander:55: error: Unmatched closing brace '}' ignored here
}
^